GRAILS-5992 made more constraint classes subclass-friendly